note list and get by id
