# modules/jet-process-backend/jet-process-rs/jet-process-rs-impl/rest-openapi.yaml
@@ -11,7 +11,7 @@ components:
     FileRsModel:
       description: Contains all the data for file creation.
       properties:
-        docFileId:
+        id:
           format: int64
           type: integer
         groupId:
@@ -44,16 +44,10 @@ components:
         userPostId:
           format: int64
           type: integer   
-        currentUser:
-          format: int64
-          type: integer
-        currentState:
-          format: int32
-          type: integer
-        dealingOrganizationId:
-          format: int64
-          type: integer
-      type: object 
+        modifiedDate:
+          format: date-time
+          type : string
+      type: object
       
     ReceiptRsModel:
       description: Contains all the data for receipt creation.
@@ -178,6 +172,15 @@ components:
           type: string
       type: object  
        
+    CategoryRsModel:
+      properties:
+        id:
+          format: int64
+          type: integer
+        name:
+          type: string
+      type: object
+       
     BasicHeadRsModel:
       properties:
         id:
@@ -225,7 +228,7 @@ components:
           type: integer     
       type: object
       
-    CategoryRsModel:
+    FileCategoryRsModel:
       properties:
         id:
           format: int64
@@ -233,7 +236,41 @@ components:
         name:
           type: string
       type: object
-    
+      
+    NoteDocumentRsModel:
+      properties:
+        id:
+          format: int64
+          type: integer
+        groupId:
+          format: int64
+          type: integer
+        noteDocumentNo:
+          type: string
+        subject:
+          type: string
+        subjectCategoryId:
+          format: int64
+          type: integer
+        content:
+          type: string
+        createdBy:  
+          format: int64
+          type: integer
+        modifiedDate:
+          format: date-time
+          type : string
+      type: object
+
+    SubjectCategoryRsModel:
+      properties:
+        id:
+          format: int64
+          type: integer
+        name:
+          type: string
+      type: object
+      
 paths:
   /docfile:
     post:
@@ -431,7 +468,25 @@ paths:
                 items:
                   $ref: '#/components/schemas/BasicHeadRsModel'
           description: ''
-      tags: ["BasicHeadRsModel"]  
+      tags: ["BasicHeadRsModel"] 
+      
+  /filecategory:
+    get:
+      operationId: getFileCategoryList
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/FileCategoryRsModel'
+            application/xml:
+              schema:
+                items:
+                  $ref: '#/components/schemas/FileCategoryRsModel'
+          description: ''
+      tags: ["FileCategoryRsModel"]
+      
   /category:
     get:
       operationId: getCategoryList
@@ -641,4 +696,122 @@ paths:
           description: ''
       tags: ["CountryRsModel"]      
       
-      
+  /notedocument:
+    post:
+      operationId: createNotedocument
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NoteDocumentRsModel'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/NoteDocumentRsModel'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+            application/xml:
+              schema:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+          description: ''
+      tags: ["NoteDocumentRsModel"]
+    get:
+      operationId: getNoteDocumentId
+      parameters:
+        - in: "query"
+          name: id
+          required: true
+          schema:
+            format: int64
+            type: integer
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+            application/xml:
+              schema:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+          description: ''
+      tags: ["NoteDocumentRsModel"]
+    delete:
+      operationId: deleteNoteDocumentById
+      parameters:
+        - in: "query"
+          name: id
+          required: true
+          schema:
+            format: int64
+            type: integer
+      responses:
+        '200':
+          content:
+            application/json: {}
+            application/xml: {}
+          description: ''
+      tags: ["NoteDocumentRsModel"]
+    put:
+      operationId: updateNoteDocument
+      parameters:
+        - in: "query"
+          name: id
+          required: true
+          schema:
+            format: int64
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NoteDocumentRsModel'
+          application/xml:
+            schema:
+              $ref: '#/components/schemas/NoteDocumentRsModel'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+            application/xml:
+              schema:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+          description: ''
+      tags: ["NoteDocumentRsModel"]
+  /notedocuments:
+    get:
+      operationId: getNoteDocumentList
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+            application/xml:
+              schema:
+                items:
+                  $ref: '#/components/schemas/NoteDocumentRsModel'
+          description: ''
+      tags: ["NoteDocumentRsModel"]
+  
+  /subjectcategory:
+    get:
+      operationId: getSubjectCategoryList
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/SubjectCategoryRsModel'
+            application/xml:
+              schema:
+                items:
+                  $ref: '#/components/schemas/SubjectCategoryRsModel'
+          description: ''
+      tags: ["SubjectCategoryRsModel"]
